# subtitle-finder-ui

./: .gitignore  CMakeLists.txt  Main.qml  Network.js  README.md  main.cpp
